--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
   <title>Fisheye</title>
 </head>
 
-<body id="app">
-  <main id="main">
-    <div class="photographer_section"></div>
-  </main>
+<body>
+  <header class="header"></header>
+  <main class="main"></main>
   <script type="module" src="./js/pages/homepage.js"></script>
 </body>
 
