--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 </head>
 
 <body>
-  <header class="header"></header>
-  <main class="main"></main>
+  <main id="app"></main>
   <script type="module" src="./js/pages/homepage.js"></script>
 </body>
 
