--- a/photographer.html
+++ b/photographer.html
@@ -2,19 +2,16 @@
 <html>
 
 <head>
-  <link href="css/style.css" rel="stylesheet" type="text/css" />
+  <link href="css/photographer.css" rel="stylesheet" type="text/css" />
   <meta charset="utf-8">
   <link rel="icon" type="image/png" href="assets/favicon.png">
   <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
   <title>Fisheye - photographe </title>
+  <script src="https://kit.fontawesome.com/571acac073.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-  <header class="header"></header>
-  <main id="main">
-    <div class="photograph-header">
-      <button class="contact_button" onclick="displayModal()">Contactez-moi</button>
-    </div>
+  <main id="app">
   </main>
   <div id="contact_modal">
     <div class="modal">
@@ -32,7 +29,6 @@
     </div>
   </div>
   <script type="module" src="/js/pages/photographer.js"></script>
-  <script src="/js/utils/contactForm.js"></script>
 </body>
 
 </html>
