--- a/photographer.html
+++ b/photographer.html
@@ -2,9 +2,9 @@
 <html>
 
 <head>
-  <link href="css/photographer.css" rel="stylesheet" type="text/css" />
+  <link href="./css/photographer.css" rel="stylesheet" type="text/css" />
   <meta charset="utf-8">
-  <link rel="icon" type="image/png" href="assets/favicon.png">
+  <link rel="icon" type="image/png" href="./assets/icons/favicon.webp">
   <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
   <title>Fisheye - photographe </title>
   <script src="https://kit.fontawesome.com/571acac073.js" crossorigin="anonymous"></script>
@@ -17,7 +17,7 @@
     <div class="modal">
       <header>
         <h2>Contactez-moi</h2>
-        <img src="assets/icons/close.svg" onclick="closeModal()" />
+        <img src="./assets/icons/close.svg" onclick="closeModal()" />
       </header>
       <form>
         <div>
