--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <link href="css/style.css" rel="stylesheet" type="text/css" />
   <meta charset="utf-8">
-  <link rel="icon" type="image/png" href="./assets/icons/favicon.png">
+  <link rel="icon" type="image/png" href="./assets/icons/favicon.webp">
   <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
   <title>Fisheye</title>
 </head>
